--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       </div>
     </section>
 
-    <!-- SERVICES -->
-    <section class="site-section services-section bg-light block__62849" id="services-section">
+  
+    <!-- <section class="site-section services-section bg-light block__62849" id="services-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
@@ -197,10 +197,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     
-    <section class="site-section" id="next-section">
+    <!-- <section class="site-section" id="next-section">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0">
@@ -217,11 +217,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     
 
-    <section class="site-section block__45439">
+    <!-- <section class="site-section block__45439">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
@@ -289,7 +289,7 @@
           </div>
         </div>
       </div>
-    </section> 
+    </section>  -->
 
     <footer class="site-footer slanted-footer">
 
