--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             <h3 class="section-title-sub text-primary">About Us</h3>
             <h2 class="section-title mb-4">Who We Are</h2>
 
-            <p>PentaSkim is a platform that enables founders can share and review insights into pitching to investors. By improving access to information and transparency, PentaSkim focuses on creating a more balanced startup ecosystem and bringing greater efficiency to the fundraising process.</p>
-          
+            <p>PentaSkim is a platform that enables founders to share and review insights into pitching to investors. By improving access to information and transparency, PentaSkim fosters a more balanced startup ecosystem and brings greater efficiency to the fundraising process.</p>
             <p class="mt-4"><a href="#" class="spepcial_link">Read more about us</a></p>
           </div>
           <div class="col-md-5 ml-auto img-overlap">
