--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
     </section>  -->
 
-    <footer class="site-footer slanted-footer">
+  <!--   <footer class="site-footer slanted-footer">
 
       <a href="#top" class="smoothscroll scroll-top">
         <span class="icon-keyboard_arrow_up"></span>
@@ -339,13 +339,13 @@
           <div class="col-12">
             <p class="copyright"><small class="block">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> PentaSkim. All rights reserved.
+            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> PentaSkim. All rights reserved. -->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </small></p>
-          </div>
-        </div>
-      </div>
-    </footer>
+            <!-- </small></p> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+    <!-- </footer> --> -->
   
   </div>
 
