--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
       </div>
     </section>  -->
 
-  <!--   <footer class="site-footer slanted-footer">
+    <footer class="site-footer slanted-footer">
 
       <a href="#top" class="smoothscroll scroll-top">
         <span class="icon-keyboard_arrow_up"></span>
       </a>
 
       <div class="container">
-        <div class="row mb-5">
+        <!-- <div class="row mb-5"> -->
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Scenic Products</h3>
             <ul class="list-unstyled">
@@ -348,14 +348,14 @@
         <div class="row text-center">
           <div class="col-12">
             <p class="copyright"><small class="block">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> PentaSkim. All rights reserved. -->
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <!-- </small></p> -->
-          <!-- </div> -->
-        <!-- </div> -->
-      <!-- </div> -->
-    <!-- </footer> --> -->
+            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> PentaSkim. All rights reserved.
+            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+            </small></p>
+          </div>
+        </div>
+      </div>
+    <!-- </footer> 
   
   </div>
 
