--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
       </a>
 
       <div class="container">
-        <!-- <div class="row mb-5"> -->
-          <div class="col-6 col-md-3 mb-4 mb-md-0">
+        <div class="row mb-5">
+          <!-- <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Scenic Products</h3>
             <ul class="list-unstyled">
               <li><a href="#">Web Design</a></li>
@@ -342,20 +342,20 @@
               <a href="#"><span class="icon-instagram"></span></a>
               <a href="#"><span class="icon-linkedin"></span></a>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="row text-center">
           <div class="col-12">
             <p class="copyright"><small class="block">
-            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> PentaSkim. All rights reserved.
-            Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </small></p>
           </div>
         </div>
       </div>
-    <!-- </footer> 
+    </footer> 
   
   </div>
 
